fix(lexical-input): correct selector for inline code styling to prevent input flickering

--- a/src/style/components/lexical-input.less
+++ b/src/style/components/lexical-input.less
@@ -64,7 +64,7 @@
 
   // Inline code should have a smaller, custom line height
   // It prevents input from flickering when inserting an inline code
-  code:not(editor-code) {
+  code:not(.editor-code) {
     line-height: 17px;
   }
 }
